2007-11-25  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add binding for g_chmod

	* Makefile.am, configure.ac, gen-project/Makefile.am,
	  gen-project/valaprojectgenerator.vala: add vala-gen-project, a simple
	  gui for generating Vala projects, not built by default, requires GTK+

2007-11-25  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: mark GtkTargetEntry as
	  value-type

	* vapi/gtk+-2.0.vapi: regenerated

2007-11-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: fix is_out support for parameters

2007-11-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support is_out for parameters in the
	  metadata

2007-11-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: add support for overriding the name and
	  namespace of types

2007-11-24  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/gen-introspect.c: avoid NULL function parameter
	  names

	* vapigen/valagidlparser.vala: accept iconv_t

2007-11-23  Jürg Billeter  <j@bitron.ch>

	* configure.ac, gobject-introspection/Makefile.am,
	  gobject-introspection/gen-introspect.c: call g_thread_init to support
	  libraries using threading functionality in class_init functions,
	  avoid NULL parameter names for signals and vfuncs

	* vapi/packages/libsoup-2.2/: update to use vala-gen-introspect

	* vapi/packages/hildon-1/hildon-1.gi,
	  vapi/packages/libgnomeui-2.0/libgnomeui-2.0.gi, vapi/hildon-1.vapi,
	  vapi/libgnomeui-2.0.vapi, vapi/libsoup-2.2.vapi: regenerated

2007-11-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/hildon-1/: update to use vala-gen-introspect

	* vapi/hildon-1.vapi: regenerated

2007-11-23  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/cparser.y: add support for anonymous structs
	  and unions (gcc extension)

2007-11-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/poppler-glib/: update to use vala-gen-introspect

	* vapi/poppler-glib.vapi: regenerated

2007-11-22  Jürg Billeter  <j@bitron.ch>